# YATFPBNWS

./: .gitignore  Cargo.toml  README  README.MD  crystal_trans_transp.tif  gecko_profile.json  perf.data  rust-toolchain.toml  undelete.sh
.VSCodeCounter/2024-11-21_15-39-12/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.github/workflows/: linter.yml
src/: cpu.rs  desktop.rs  displays.rs.old  gpus.rs  main.rs  model.rs  packages.rs  shell.rs  terminal.rs  uptime.rs  utils.rs
src/displays/: descriptor_parse.rs  edid_video_input_params.rs  mod.rs  preferred_timing.rs
src/viuer/: config.rs  error.rs  mod.rs  readme.md
src/viuer/printer/: iterm.rs  kitty.rs  mod.rs  sixel.rs
