cargo-features = ["profile-rustflags"]

[package]
name = "yatfpbnws"
version = "0.1.0"
edition = "2021"
authors = ["WinterSys/Vortetty"]

[profile.release]
#strip = "symbols"
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug=2
rustflags = ["-C", "target-cpu=native", "-C", "link-arg=-fuse-ld=mold", "-Z", "threads=24"]#, "-Z", "location-detail=none"]

[profile.release.package."*"]
#strip = "symbols"
opt-level = 3
codegen-units = 1
debug=2
rustflags = ["-C", "target-cpu=native", "-C", "link-arg=-fuse-ld=mold", "-Z", "threads=24"]#, "-Z", "location-detail=none"]

[profile.dev]
incremental = true
strip = false
opt-level = 1
lto = "thin"
codegen-units = 12
debug=2
rustflags = ["-C", "target-cpu=native", "-C", "link-arg=-fuse-ld=mold", "-Z", "threads=24", "-C", "symbol-mangling-version=v0", "-C", "link-arg=-Wl,--no-rosegment"]

[profile.dev.package."*"]
strip = false
opt-level = 1
codegen-units = 12
debug=2
rustflags = ["-C", "target-cpu=native", "-C", "link-arg=-fuse-ld=mold", "-Z", "threads=24", "-C", "symbol-mangling-version=v0", "-C", "link-arg=-Wl,--no-rosegment"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.17", features = ["cargo"] }
crossterm = "0.28.1"
csscolorparser = { version = "0.7.0", features = ["lab", "rgb"] }
image = "0.25.2"
termcolor = "1.1"
ansi_colours = "1.0"
base64 = "0.22.1"
tempfile = "3.1"
console = { version = "0.15", default-features = false }
lazy_static = "1.4"
sixel-rs = "0.3.3"
owo-colors = "4.1.0"
sysinfo = { version = "0.31.4", default-features = false, features = ["component", "disk", "network", "system", "user"]}
text-splitter = "0.16.1"
which = "6.0.3"
byteorder = "1.5.0"
